# pthread

./: CMakeLists.txt
src/: CreatThread.cpp  testlifepriod.cpp
